// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ render MutateOwnerReportModal ]] renders MutateOwnerReportModal in create report mode: {"level":"OWNER","ownerLogin":"deepsourcelabs","vcsProvider":"gh","editMode":false} 1`] = `
"<zmodal-stub width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <fieldset class=\\"p-4 flex flex-col gap-y-7\\"><label for=\\"report-title\\" class=\\"space-y-2 text-sm text-vanilla-200 w-full\\">
      <p class=\\"text-sm font-medium text-vanilla-100\\">Label</p>
      <zinput-stub name=\\"\\" value=\\"\\" label=\\"\\" type=\\"text\\" placeholder=\\"What’s this report for?\\" debouncedelay=\\"350\\" size=\\"small\\" backgroundcolor=\\"ink-400\\" errorbordercolor=\\"cherry\\" required=\\"true\\" id=\\"report-title\\"></zinput-stub>
      <p class=\\"flex items-center gap-x-1 text-vanilla-400 text-xs\\">
        This is used for internal reference only
      </p>
    </label>
    <!---->
    <div class=\\"space-y-3\\">
      <toggleinput-stub input-width=\\"xx-small\\" label=\\"Restrict report access\\" input-id=\\"toggle-password-protection\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"><template></template></toggleinput-stub>
      <!---->
    </div>
    <div class=\\"grid grid-cols-2\\">
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs uppercase text-vanilla-400 font-medium tracking-wider\\">Security</p>
        <zcheckbox-stub label=\\"OWASP Top 10\\" name=\\"\\" value=\\"owasp-top-10\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"SANS Top 25\\" name=\\"\\" value=\\"sans-top-25\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs uppercase text-vanilla-400 font-medium tracking-wider\\">Insights</p>
        <!---->
        <!---->
        <zcheckbox-stub label=\\"Code Health Trend\\" name=\\"\\" value=\\"code-health-trend\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"Issue Distribution\\" name=\\"\\" value=\\"issue-distribution\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"Code Coverage\\" name=\\"\\" value=\\"code-coverage\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"Issues Prevented\\" name=\\"\\" value=\\"issues-prevented\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"Issues Autofixed\\" name=\\"\\" value=\\"issues-autofixed\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
      </div>
    </div>
    <toggleinput-stub input-width=\\"xx-small\\" label=\\"Share historical data\\" input-id=\\"toggle-share-historical-data\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"><template></template></toggleinput-stub> <label for=\\"source-repos\\" class=\\"space-y-2 text-sm\\">
      <p class=\\"font-medium text-vanilla-100\\">Select repositories</p>
      <zradiogroup-stub modelvalue=\\"SOURCE_ALL\\" id=\\"source-repos\\" class=\\"grid grid-cols-2\\">
        <zradio-stub modelvalue=\\"\\" label=\\"All repositories\\" value=\\"SOURCE_ALL\\"></zradio-stub>
        <zradio-stub modelvalue=\\"\\" label=\\"Custom\\" value=\\"SOURCE_SELECTED\\"></zradio-stub>
      </zradiogroup-stub>
    </label>
  </fieldset>
  <selectrepositoriesforreport-stub report-id=\\"\\" owner-login=\\"deepsourcelabs\\" vcs-provider=\\"gh\\" style=\\"display: none;\\"></selectrepositoriesforreport-stub>
</zmodal-stub>"
`;

exports[`[[ render MutateOwnerReportModal ]] renders MutateOwnerReportModal in edit report mode: {"level":"OWNER","ownerLogin":"deepsourcelabs","vcsProvider":"gh","editMode":false,"isRestrictedOld":true,"reportIdOld":"aa183352-4b5e-427a-ac8d-95c47c52b6a1","reportKeysOld":["owasp-top-10","sans-top-25"],"reportLabelOld":"Sample Report","shareHistoricalDataOld":true,"reportSourceOld":"SOURCE_SELECTED","sourceRepoCountOld":2} 1`] = `
"<zmodal-stub width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <fieldset class=\\"p-4 flex flex-col gap-y-7\\"><label for=\\"report-title\\" class=\\"space-y-2 text-sm text-vanilla-200 w-full\\">
      <p class=\\"text-sm font-medium text-vanilla-100\\">Label</p>
      <zinput-stub name=\\"\\" value=\\"\\" label=\\"\\" type=\\"text\\" placeholder=\\"What’s this report for?\\" debouncedelay=\\"350\\" size=\\"small\\" backgroundcolor=\\"ink-400\\" errorbordercolor=\\"cherry\\" required=\\"true\\" id=\\"report-title\\"></zinput-stub>
      <p class=\\"flex items-center gap-x-1 text-vanilla-400 text-xs\\">
        This is used for internal reference only
      </p>
    </label> <label for=\\"report-link\\" class=\\"space-y-2 text-sm text-vanilla-200 w-full\\">
      <p class=\\"text-sm font-medium text-vanilla-100\\">Shareable link</p>
      <zinput-stub name=\\"\\" value=\\"https://deepsource.io/report/aa183352-4b5e-427a-ac8d-95c47c52b6a1\\" label=\\"\\" type=\\"text\\" placeholder=\\"Shareable link for the report...\\" readonly=\\"true\\" debouncedelay=\\"350\\" size=\\"medium\\" backgroundcolor=\\"ink-400\\" errorbordercolor=\\"cherry\\" id=\\"report-link\\"><template></template></zinput-stub>
    </label>
    <div class=\\"space-y-3\\">
      <toggleinput-stub input-width=\\"xx-small\\" label=\\"Restrict report access\\" input-id=\\"toggle-password-protection\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"><template></template></toggleinput-stub>
      <!---->
    </div>
    <div class=\\"grid grid-cols-2\\">
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs uppercase text-vanilla-400 font-medium tracking-wider\\">Security</p>
        <zcheckbox-stub label=\\"OWASP Top 10\\" name=\\"\\" value=\\"owasp-top-10\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"SANS Top 25\\" name=\\"\\" value=\\"sans-top-25\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs uppercase text-vanilla-400 font-medium tracking-wider\\">Insights</p>
        <!---->
        <!---->
        <zcheckbox-stub label=\\"Code Health Trend\\" name=\\"\\" value=\\"code-health-trend\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"Issue Distribution\\" name=\\"\\" value=\\"issue-distribution\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"Code Coverage\\" name=\\"\\" value=\\"code-coverage\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"Issues Prevented\\" name=\\"\\" value=\\"issues-prevented\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub label=\\"Issues Autofixed\\" name=\\"\\" value=\\"issues-autofixed\\" truevalue=\\"true\\" modelvalue=\\"\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
      </div>
    </div>
    <toggleinput-stub input-width=\\"xx-small\\" label=\\"Share historical data\\" input-id=\\"toggle-share-historical-data\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"><template></template></toggleinput-stub> <label for=\\"source-repos\\" class=\\"space-y-2 text-sm\\">
      <p class=\\"font-medium text-vanilla-100\\">Select repositories</p>
      <zradiogroup-stub modelvalue=\\"SOURCE_ALL\\" id=\\"source-repos\\" class=\\"grid grid-cols-2\\">
        <zradio-stub modelvalue=\\"\\" label=\\"All repositories\\" value=\\"SOURCE_ALL\\"></zradio-stub>
        <zradio-stub modelvalue=\\"\\" label=\\"Custom\\" value=\\"SOURCE_SELECTED\\"></zradio-stub>
      </zradiogroup-stub>
    </label>
  </fieldset>
  <selectrepositoriesforreport-stub report-id=\\"aa183352-4b5e-427a-ac8d-95c47c52b6a1\\" owner-login=\\"deepsourcelabs\\" vcs-provider=\\"gh\\" style=\\"display: none;\\"></selectrepositoriesforreport-stub>
</zmodal-stub>"
`;
